--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.5",
+    "sweetalert2-react-content": "^4.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,7 +15,6 @@
     "@testing-library/user-event": "^12.1.10",
     "web-vitals": "^1.0.1"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
